# aurora

./: .gitignore  CMakeLists.txt  README.md
examples/01_hello_window/: main.cpp
include/aurora/: aurora.hpp
include/aurora/animation/: Easing.hpp  Spring.hpp  Timeline.hpp
include/aurora/core/: Application.hpp  Object.hpp  Types.hpp
include/aurora/graphics/: Mesh.hpp  Renderer.hpp  Shader.hpp  Texture.hpp
include/aurora/platform/: Event.hpp  IPlatform.hpp  Window.hpp
src/core/: Application.cpp
src/graphics/: Shader.h
src/graphics/opengl/: GLShader.cpp  GLShader.h
src/platform/: PlatformFactory.cpp
src/platform/x11/: X11Platform.cpp
